Last edits to Conclusion

--- a/TD Beer Game.ipynb
+++ b/TD Beer Game.ipynb
@@ -2075,13 +2075,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Through this project, we learned how the Q-Learning and SARSA models of TD-Learning compare and contrast, and what types of problems they might best solve.\n",
+    "\n",
+    "* SARSA (State-Action-Reward-State-Action) updates Q value based on the current state of s, the action a, the reward r that an agent gets by choosing the action a and the next state s′\n",
+    "\n",
+    "\n",
+    "* While Q-learning is somewhat easier to implement and understand and arrives at optimal solutions, it does not always maximize total reward due to the assumptions it makes when selecting actions. In situations where the optimal path is more important than reward maximization, Q-learning models will likely perform best.\n",
+    " \n",
+    "* SARSA models arrive at near optimal solutions, and take a conservative approach to reward maximization. Because of this, they perform best in scenarios like the Cliff Walking problem, where incorrect moves incur high penalties. \n",
+    "\n",
+    "    * For this reason, we believed that the SARSA model would be best to solve the Beer Game, as we are more concerned with cost minimization (maximizing reward).\n",
+    "\n",
+    "\n",
+    "Our hypothesis was that the Warehouse Q-agent would learn to maintain a net inventory at 0 in fewer time-steps when $\\alpha$ is high, $\\beta$ is low, and $\\gamma$ is low.\n",
+    "\n",
+    "* **High learning rate** may be optimal because the value of certain actions will change depending on the environment\n",
+    "* **Liberal strategy**  (low $\\beta$), the agent may be more likely to explore the option of ordering lower stock, even though it may seem counterintuitive towards the goal reducing the cost of backorders at a particular time-step\n",
+    "* **Lower discount rate** will help the agent integrate the feedback despite the effect of time delays\n",
+    "\n",
+    "\n",
+    "If we were to perform this project again, along with fully testing our model, we would be interested in seeing how outcomes would change if states changed along with action selection. In this, we would be able to more realistically model cost minimization in the Beer Game, given that real environments are not perfectly stable.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "hypothesis analysis"
-   ]
+   "source": []
   }
  ],
  "metadata": {
